--- a/lib/views/play.erb
+++ b/lib/views/play.erb
@@ -1,8 +1,8 @@
-<%= @player_one_name %> vs <%= @player_two_name %>
+<%= $player_one.name %> vs <%= $player_two.name %>
 <div class="hit-points">
-  <%= @player_two_name %>: 60/60 HP
+  <%= $player_two.name %>: 60/60 HP
 </div>
 <form method="post" action="/attack">
   <button type="submit" name="attack" value="true">Attack</button>
 </form>
-<%= 'You attacked player 2' if @attack  %>
+<%= 'You attacked player 2' if $attack  %>
