--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -1,3 +1,8 @@
+
+<audio controls autoplay>
+  <source src="public/starwars.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+</audio>
 <form action="/names" method="post">
   <input type="text" name="player_one_name"/>
   <input type="text" name="player_two_name"/>
