this will really annoy people

--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -1,8 +1,5 @@
+<embed name="myMusic" loop="true" hidden="true" src="starwars.mp3"></embed>
 
-<audio controls autoplay>
-  <source src="public/starwars.mp3" type="audio/mpeg">
-    Your browser does not support the audio element.
-</audio>
 <form action="/names" method="post">
   <input type="text" name="player_one_name"/>
   <input type="text" name="player_two_name"/>
