ex 29 end screen

--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -1,7 +1,17 @@
 <embed name="myMusic" loop="true" hidden="true" src="starwars.mp3"></embed>
 
+<h1>LETS BEGIN</h1>
 <form action="/names" method="post">
   <input type="text" name="player_one_name"/>
   <input type="text" name="player_two_name"/>
-  <input type="submit" value="Submit"/>
+  <button type="submit" name="Sumbit" value="true">
+    <h3>SUBMIT</h3></button>
 </form>
+<style type="text/css">
+body {
+  color: black;
+  font-size: 60px;
+  font-style: italic;
+  font-family: helvetica;
+  background-color: #DBDBDB }
+</style>
