--- a/lib/views/end.erb
+++ b/lib/views/end.erb
@@ -7,7 +7,7 @@ body {
   font-size: 200px;
   font-style: italic;
   font-family: helvetica;
-  background-image: url(https://media.giphy.com/media/NWsuLmDqb263e/giphy.gif);
+  background-image: ;
   background-color: #DBDBDB }
 
 
